# SecureChat

./: CMakeLists.txt  Chat.cpp  Chat.h  UI.cpp  UI.h  imgui.ini  main.cpp  primitive_root_validator.cpp  public.txt  test.cpp
sec/: ElGamalSignature.cpp  ElGamalSignature.h  aes256.hpp  sha1.cpp
util/: BigInt.cpp  BigInt.h  BinaryInt.cpp  BinaryInt.h
